imagenes nuevas y logo

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
 <body class="container-fluid">
   
-    <header class="row position-relative mb-5 rounded" id="header">
+    <header class="row" id="header">
         <nav class="navbar navbar-expand-lg ">  
           <div class="container-fluid">
-            <img  src="assets/md.gif" alt="moon design" class="logo">
-            <a href="" class="navbar-brand fw-semibold fs-3">Blank_file</a>
+            
+            <a href="" class="navbar-brand"> <img  src="assets/iconos nuevos/logo-chico.gif" alt="Blank File" class="logo"> </a>
         <!-- NAV BUTTON  -->
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#menuLateral">
             <span class="navbar-toggler-icon"></span>
@@ -65,7 +65,7 @@
         <!-- OFFCANVAS MAIN CONTAINER START -->
         <section class="offcanvas offcanvas-start" id="menuLateral" tabindex="-1">
           <div class="offcanvas-header" data-bs-theme="dark">
-            <h3 class="offcanvas-title fs-3">Blank_file</h3>
+            <a class="offcanvas-title"><img  src="assets/iconos nuevos/logo-chico.gif" alt="Blank File" class="logo "></a>
             <button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="offcanvas"></button>
           </div>
           <!-- OFF CANVAS MENU LINKS  START-->
@@ -235,7 +235,7 @@
 <section class="nosotros row py-5" id="">
 
    <div class=" img col-md-5 offset-md-1 ">
-       <img src="assets/logos.gif" class="img-fluid" alt="">
+       <img src="assets/iconos nuevos/bf about degrade mas chico.gif" class="img-fluid" alt="">
    </div>
     <div class="texto col-md-6" >
         <div class=" col-md-12 py-5">
