--- a/contacto.html
+++ b/contacto.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>contacto</h1>
+    <p>
+        Nos da mucho gusto que estes acá, puedes elegir cualquiera de nuestras 
+        lineas de contacto para comunicarte con nosotros
+    </p>
 </body>
 </html>
