footer, contactos, y cositas

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
           <div class="offcanvas-body d-flex flex-column justify-content-between px-5">
             <ul class="navbar-nav fs-6 justify-content-end ">
               <li class="nav-item p-3 py-md-1">
-                <a href="" id="inicio" class="nav-link">INICIO</a>
-              </li>
-              <li class="nav-item p-3 py-md-1">
-                <a href="#" class="nav-link">SERVICIOS</a>
+                <a href="#bannertop" id="inicio" class="nav-link">INICIO</a>
               </li>
               <li class="nav-item p-3 py-md-1">
                 <a href="#about" class="nav-link">SOBRE NOSOTROS</a>
+              </li>
+              <li class="nav-item p-3 py-md-1">
+                <a href="" class="nav-link">SERVICIOS</a>
               </li>
               <li class="nav-item p-3 py-md-1">
                 <a href="" class="nav-link">BLOG</a>
@@ -317,7 +317,7 @@
 <div class=" col-lg-12 col-md-12 pt-5" id="hablemos">
   <h5><i class="bi bi-people"></i> Hablemos </h5>
       <h3>
-        ¿Tienes un proyecto<br> en mente?</h3>
+        ¿Tienes una idea<br> en mente?</h3>
         <hr>
         <p>
           Si estas listo, escribenos para darle vida. 
@@ -367,9 +367,7 @@
   <a href="https://api.whatsapp.com/send?phone=+5493521531997&amp;text= Quiero mi pagina web : "
   target="_blank"><button class="linkt"> Whatsapp<i class="bi bi-whatsapp px-3  fs-2"></i></button></a>
   <a href="mailto:blankfile.contact@gmail.com"><button class="linkt">Mail<i class="bi bi-envelope-at px-3 fs-2"></i></button></a>
-  <a href="mailto:omega_seguridad@yahoo.com"><button class=" linkt">E mail 2</button></a>
-  <a href="tel:+5493521531997" target="_blank" rel="noopener noreferrer"><button class=" linkt">Celular</button></a>
-  <a id="lfijo" href="tel:+5493514883010" target="_blank" rel="noopener noreferrer" ><button class="linkt ">Fijo</button></a>
+  <a href="mailto:omega_seguridad@yahoo.com"><button class=" linkt">Messenger</button></a>
 </div> 
 
     </div>
@@ -381,8 +379,34 @@
 
 
     
-    <footer class="footer row">
-        <div class="copy col-md-12">
+    <footer class=" row pt-4">
+      <div class="col-md-6">
+          <img class="img-fluid" src="assets/iconos nuevos/bf-footer.png" alt="">
+          <p class="py-4">
+             Como vos, estamos creciendo, nos estamos expandiendo, y queremos que seas parte de esto. 
+          </p>
+      </div>
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-6 col-sm-6">
+  12
+
+</div>
+      <div class="col-md-6 col-sm-6">
+        <h5>Recursos</h5>
+        <ul>
+          <li><a href="#bannertop">Volver al inicio</a></li>
+          <li><a href="">Contacto</a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </div>
+        </div>
+
+      </div>
+      
+      <hr>
+        <div class="copyright col-md-12">
           <p>
             Copyright © 2023 Blank_file Todos los derechos reservados 
           </p>
