--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a href="#bannertop" id="inicio" class="nav-link">INICIO</a>
               </li>
               <li class="nav-item p-3 py-md-1">
-                <a href="#about" class="nav-link">SOBRE NOSOTROS</a>
+                <a href="#nos" class="nav-link">SOBRE NOSOTROS</a>
               </li>
               <li class="nav-item p-3 py-md-1">
                 <a href="" class="nav-link">SERVICIOS</a>
@@ -144,8 +144,7 @@
              <div id="intro" class="col-md-8">
       <h2  class="">Las primeras impresiones son importantes</h2>
      <p>
-      Un sitio web no es solo una revista llena de imagenes y textos, es la identificacion y la cara de tu empresa
-      en el mundo digital. En Blank_file nos enfocamos en los puntos relevantes de cada rubro en particular,
+      Un sitio web es la cara de tu empresa en el mundo digital. En Blank_file nos enfocamos en los puntos relevantes de cada rubro en particular,
      entregando asi, un trabajo especifico para cada empresa pensado en aumentar la visibilidad de su producto o servicio.<br>
      Te contamos a continuacion algunos puntos importantes...
      </p>
@@ -160,7 +159,7 @@
 <section class="flayers ">
     <div class="container-fluid ">
         <div class="row center-flay">
-            <article class="articulo  col-lg-3 col-md-4 col-sm-12">
+            <article class="articulo izq  col-lg-3 col-md-4 col-sm-12">
                 <div class="text">
                    <h5 class="subtitle">
                     <small>
@@ -221,7 +220,7 @@
  
        <!--about-->
 
-       <section class="nos">
+       <section class="nos" id="nos">
           <div class="container">
             <div class="row py-5 about-center">
                 <div class="aboutimg img col-md-6 ">
@@ -268,7 +267,7 @@
 
        <section class="work" id="work">
         <div class="container">
-            <div class="row trabajos">
+            <div class="row trabajos izq">
                 <div class=" col-lg-6 col-md-6  ">
                     <h5 class=""><i class="bi bi-file-earmark-code"></i> Nuestros proyectos</h5>
                         <h3 class="py-3">
@@ -315,8 +314,8 @@
  <!--heblemos-->
 
  <section class="hablemos">
-    <div class="container">
-        <div class="row">
+    <div class="container about">
+        <div class="row ">
             <div class=" col-lg-12 col-md-12 pt-5" id="hablemos">
                 <h5><i class="bi bi-people"></i> Hablemos </h5>
                     <h3>
@@ -334,8 +333,8 @@
  <!--formulario-->
 
  <section class="formu">
-    <div class="container">
-        <div class="row" id="form-consulta">
+    <div class="container about">
+        <div class="row" id="form-consulta ">
             <form action="https://formsubmit.co/blankfile.contact@gmail.com" method="POST"  
     class="col-md-6 " id="formulario-consulta" >
       
