--- a/index.html
+++ b/index.html
@@ -50,12 +50,10 @@
     <link rel="icon" href="assets/bf about degrade chico.ico">
 </head>
 <body>
-  
-  <div class="cursor"></div>
-  <div class="cursor2"></div>
-  <script src="js/cursor.js"></script>
-  
-  
+
+  <div class="cursor-dot" data-cursor-dot></div>
+  <div class="cursor-outline" data-cursor-outline></div>
+
 
     <header class="" id="header">
         <nav class="navbar navbar-expand-lg ">  
@@ -105,7 +103,8 @@
           </div>
         </nav>
     </header>
-<div id="particles-js"></div>
+
+
         <!--baner-->
     <section class="container-fluid">
          <div class="row  " id="bannertop">
@@ -437,9 +436,8 @@
  
 
 
-  <script src="js/particles.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="nav.js"></script>
-  <script src="index.js"></script>
+  <script src="js/cursor.js"></script>
+  <script src="js/nav.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
