cursor en touch y animacion flayer

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         Responsive Design
                     </small>
                 </h5>  
-                  <h4 class="title">Tu sitio web en todos los dispositivos</h4>
+                  <h4 class="title">Tu sitio web visible en todos los dispositivos</h4>
                   
                   <img class="img-fluid" src="assets/responsive-2.png" alt="">
                   <span class="hide2" id="hideText2">
