--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
     <p>
         Nos da mucho gusto que estes acá, puedes elegir cualquiera de nuestras 
         lineas de contacto para comunicarte con nosotros
-        prueba clone
+        prueba clone 2
     </p>
 </body>
 </html>
