--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -119,10 +119,10 @@
          <div class="row  " id="bannertop">
         
         <div class="col-md-12 " id="fondo">
-        <h1>Crea tu Página Web</h1>
+        <h1>Nosotros estuvimos en tu lugar</h1>
         
         <h3> 
-          Diseñamos y administramos el sitio web para tu empresa
+          Hoy estamos para guiarte
         </h3>
 
            <a href="#titulo" class=" rounded btn-neon">
