boton scroll top

--- a/index.html
+++ b/index.html
@@ -51,8 +51,16 @@
 </head>
 <body>
 
+       <!--cursor-->
+
   <div class="cursor-dot" data-cursor-dot></div>
   <div class="cursor-outline" data-cursor-outline></div>
+
+       <!--buttom scroll top-->
+
+  <button class="btn-scrolltop" id="btn_scrolltop">
+    <i class="fas fa-chevron-up"></i>
+  </button>
 
 
     <header class="" id="header"> 
@@ -199,7 +207,7 @@
                 </div>
         </article>
     
-        <article class="articulo1 col-lg-3 col-md-3">
+        <article class="articulo1 col-lg-3 col-md-3 col-sm-10">
                 <div class="text">
                   <h5 class="subtitle">
                     <small>
@@ -221,7 +229,7 @@
                 </div>
         </article>   
     
-        <article class="articulo2 col-lg-3 col-md-3">
+        <article class="articulo2 col-lg-3 col-md-3  col-sm-10">
                 <div class="text">
                   <h5 class="subtitle">
                     <small>
@@ -450,11 +458,11 @@
 </footer>
     </main>
 
-  <!--cursor-->
+  <!--script-->
 
  
 
-
+  <script src="js/btn-scroll.js"></script>
   <script src="js/cursor.js"></script>
   <script src="js/nav.js"></script>
   <script src="js/animation.js"></script>
