--- a/contacto.html
+++ b/contacto.html
@@ -51,9 +51,17 @@
 </head>
 <body>
 
+  <!--cursor-->
+
   <div class="cursor-dot" data-cursor-dot></div>
   <div class="cursor-outline" data-cursor-outline></div>
 
+
+         <!--buttom scroll top-->
+       
+         <button class="btn-scrolltop" id="btn_scrolltop">
+          <i class="fas fa-chevron-up"></i>
+        </button>
 
     <header class="" id="header"> 
      <nav class="navbar navbar-expand-lg" id="nav">  
@@ -267,16 +275,15 @@
 </footer>
     </main>
 
-  <!--cursor-->
+  <!--script-->
 
  
 
-
+  <script src="js/btn-scroll.js"></script>
   <script src="js/cursor.js"></script>
   <script src="js/nav.js"></script>
   <script src="js/animation.js"></script>
   <script src="js/readmore.js"></script>
   <script src="js/nocturnemode.js"></script>
-
 </body>
 </html>
