maqueta de como trabajamos

--- a/index.html
+++ b/index.html
@@ -253,48 +253,72 @@
     </div>
 </section>
  
-       <!--about-->
-<section class="nos" id="nos">
-          <div class="container">
-            <div class="row py-5 about-center">
-                <div class="aboutimg img col-md-6 ">
-                    <h3>
-                        Servicios
-                    </h3>
-                    <hr>
-                    <img src="assets/bf about degrade mas chico.gif" class="img-fluid" alt="">
-                </div>
-                 <div class="texto col-md-6" >
-                     <div class="about col-md-12 py-5">
-                         <h4>
-                           <i class="bi bi-file-person"></i> ¿quienes somos?
-                         </h4>
-                         <p>
-                         Blank_file surge con el propósito de ayudar a
-                         pequeñas empresas a crear su presencia en línea. Con el tiempo, nuestra dedicación 
-                         y experiencia nos han llevado a colaborar con grandes empresas.<br>
-                          Aunque hemos crecido, nuestro enfoque en el éxito de nuestros 
-                          clientes sigue siendo el mismo. Estamos comprometidos en 
-                          proporcionar sitios web personalizados, intuitivos y atractivos que impulsen el 
-                          crecimiento de tu negocio. </p>
-                     </div>
-                     <div class="about col-md-12 py-5" >
-                         <h4>
-                            <i class="bi bi-chat-left-heart"></i> Nos apasiona lo que hacemos
-                         </h4>
-                         <p>
-                             Cada proyecto que asumimos es tratado con el mismo
-                              nivel de dedicación y compromiso como si fuera para nosotros. 
-                              Nos enorgullece entregar resultados excepcionales, ya que comprendemos la importancia 
-                              de cada detalle para el éxito de tu negocio.<br> Tu éxito es nuestro
-                             objetivo, nos esforzamos por lograrlo en cada proyecto.<br>
-                             Confía en nosotros para brindarte soluciones digitales personalizadas y llevar tu presencia en línea al 
-                             siguiente nivel, sin importar el tamaño de tu empresa.
-                         </p>
-                     </div>
-                 </div>
-            </div>
-          </div>
+       <!--como trabajamos-->
+<section class="meet">
+  <div class="container">
+    <div class="row">
+      <h5>¿Como trabajamos?</h5>
+      <h3>Tu Pagina web en 3 simples pasos</h3>
+      <div class="col-md-6">
+        <img class="img-fluid" src="assets/meet.jpeg" alt="">
+      </div>
+      <div class="col-md-6">
+        <h4>titulo 1</h4>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+          Nesciunt repudiandae quod praesentium quia sed molestias odit debitis 
+          ratione deleniti, doloribus beatae, dolores magni enim quaerat porro quos 
+          consequuntur amet accusantium!
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h4>titulo 2</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Facilis ipsum eius perspiciatis sint amet odit vero, error 
+          consectetur eligendi adipisci atque perferendis accusantium architecto ad?
+           Tenetur ratione incidunt quas maiores!
+        </p>
+      </div>
+      <div class="col-md-6">
+        <img class="img-fluid" src="/assets/figma.jpeg" alt="">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <img class="img-fluid" src="assets/meet.jpeg" alt="">
+      </div>
+      <div class="col-md-6">
+        <h4>titulo 3</h4>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+          Nesciunt repudiandae quod praesentium quia sed molestias odit debitis 
+          ratione deleniti, doloribus beatae, dolores magni enim quaerat porro quos 
+          consequuntur amet accusantium!
+        </p>
+      </div>
+    </div>  
+
+    <div class="row">
+      <div class="col-md-6">
+        <h4>titulo 4</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Facilis ipsum eius perspiciatis sint amet odit vero, error 
+          consectetur eligendi adipisci atque perferendis accusantium architecto ad?
+           Tenetur ratione incidunt quas maiores!
+        </p>
+      </div>
+      <div class="col-md-6">
+        <img class="img-fluid" src="/assets/diseño-web.jpeg" alt="">
+      </div>
+    </div>
+  </div>
+
+
 </section>
 
        <!--trabajos-->
