nuevas secciones al index

--- a/contacto.html
+++ b/contacto.html
@@ -233,6 +233,7 @@
  <!--footer-->
 
 <footer class="">
+  <hr style="width: 90%; margin-left: 5%;padding-top: 5px;">
     <div class="container footer">
         <div class="row pt-4 foot">
             <div class=" col-md-6 ">
