--- a/index.html
+++ b/index.html
@@ -321,11 +321,31 @@
 
 </section>
 
+<section class="dominio">
+  <div class="container">
+    <div class="col-md-10">
+      <h2>
+        ...Todavia no tenes pensado un dominio? <br>
+        ...No tenes idea de que es un hosting?
+      </h2>
+
+      <p>
+        Te ayudamos en la eleccion de tu dominio para que, ademas de ser atractivo, pueda ser efectivo a la hora de posicionar tu sitio web en los navegadores mas 
+        populares. 
+      </p>
+      <p>
+        Si queres saber que es un dominio, un hosting, y adentrarte mas al mundo digital, te invitamos a visitar nuestro blog en siguiente enlace o en el menu de navegacion superio. 
+        
+      </p>
+    </div>
+  </div>
+</section>
+
        <!--trabajos-->
 
 <section class="work" id="work">
         <div class="container">
-            <div class="row trabajos low">
+            <div class="row trabajos low"">
                 <div class=" col-lg-6 col-md-6  ">
                     <h5 class=""><i class="bi bi-file-earmark-code"></i> Nuestros proyectos</h5>
                         <h3 class="py-3">
@@ -439,8 +459,9 @@
  
 
  <!--footer-->
-
+ 
 <footer class="">
+  <hr style="width: 90%; margin-left: 5%;">
     <div class="container footer">
         <div class="row pt-4 foot">
             <div class=" col-md-6 ">
