--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -342,6 +342,7 @@
  <!--footer-->
 
 <footer class="">
+  <hr style="width: 90%; margin-left: 5%;">
     <div class="container footer">
         <div class="row pt-4 foot">
             <div class=" col-md-6 ">
