prueba cambios git a netlify

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <span id="span2"></span>
         <span id="span3"></span>
         <span id="span4"></span>
-         Contáctate
+         Contacto
     </a>
         
 
