padding top y size de h1

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         
         <div class="col-md-12 " id="fondo">
         <h1>Diseño web que inspira,<br>
-          tecnología que sorprende.</h1>
-        
+          tecnología que sorprende</h1>
+        <br>
         <h3> 
           Convierte tus ideas en experiencias digitales únicas.
         </h3>
