--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@
   <div class="container ">
     <h5>¿Como lo hacemos?</h5>
       <h3>Tu Pagina web en 3 simples pasos</h3>
-    <div class="row py-5">
+    <div class="row pt-5">
       
-      <div class="col-md-6 ">
+      <div class="col-md-6 img-center">
         <img class="img-fluid" src="assets/meet.jpeg" alt="">
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 ">
         <h4>titulo 1</h4>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -283,13 +283,13 @@
            Tenetur ratione incidunt quas maiores!
         </p>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 img-center">
         <img class="img-fluid" src="/assets/figma.jpeg" alt="">
       </div>
     </div>
 
     <div class="row pb-5">
-      <div class="col-md-6">
+      <div class="col-md-6 img-center">
         <img class="img-fluid" src="assets/meet.jpeg" alt="">
       </div>
       <div class="col-md-6">
@@ -313,7 +313,7 @@
            Tenetur ratione incidunt quas maiores!
         </p>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 img-center">
         <img class="img-fluid" src="/assets/diseño-web.jpeg" alt="">
       </div>
     </div>
