--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -296,7 +296,7 @@
     <div class="container">
         <div class="row" id="form-consulta">
             <form action="https://formsubmit.co/blankfile.contact@gmail.com" method="POST"  
-    class="col-md-6 izq" id="formulario-consulta" >
+    class="col-md-6 izq" id="formulario-consulta" netlify>
       
       <div class="offset-md-1 col-md-10"> 
         <label for="name"> Nombre</label>
