--- a/contacto.html
+++ b/contacto.html
@@ -184,8 +184,7 @@
 <section class="formu pb-5">
     <div class="container about">
         <div class="row" id="form-consulta">
-            <form action="https://formsubmit.co/blankfile.contact@gmail.com" method="POST"  
-    class="col-md-6 " id="formulario-consulta" data-netlify="true" netlify>
+            <form class="col-md-6 " id="formulario-consulta" netlify>
       
       <div class="offset-md-1 col-md-10"> 
         <label for="name"> Nombre</label>
