--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -295,8 +295,7 @@
 <section class="formu pb-5">
     <div class="container">
         <div class="row" id="form-consulta">
-            <form action="https://formsubmit.co/blankfile.contact@gmail.com" method="POST"  
-    class="col-md-6 izq" id="formulario-consulta" data-netlify="true" netlify>
+            <form class="col-md-6 izq" id="formulario-consulta" netlify>
       
       <div class="offset-md-1 col-md-10"> 
         <label for="name"> Nombre</label>
