--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;
-500;600;700;800;900;1000&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;
+900&display=swap" rel="stylesheet">
 
     <!--estilos-->
     <link rel="stylesheet" href="styles/style.css">
@@ -390,7 +390,7 @@
  <!--heblemos-->
 
 <section class="hablemos pt-5">
-    <div class="container izq">
+    <div class="container low">
         <div class="row ">
             <div class=" col-lg-12 col-md-12" id="hablemos">
                 <h5><i class="bi bi-people"></i> Hablemos </h5>
