baner img e intro

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -181,7 +181,7 @@
 <section class="nos" id="nos">
           <div class="container">
             <div class="row py-5 about-center">
-                <div class="izq img col-md-6 ">
+                <div class="izq img col-md-6 centro-img ">
                     <img src="assets/noso-img.png" class="img-fluid" alt="">
                 </div>
                  <div class="texto col-md-6" >
