--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -182,7 +182,7 @@
           <div class="container">
             <div class="row py-5 about-center">
                 <div class="izq img col-md-6 centro-img ">
-                    <img src="assets/noso-img.png" class="img-fluid" alt="">
+                    <img src="assets/nos-new.png" class="img-fluid" alt="">
                 </div>
                  <div class="texto col-md-6" >
                      <div class="col-md-12 py-5">
