--- a/blog.html
+++ b/blog.html
@@ -5,3 +5,14 @@
       experiencia del usuario y aumenta las posibilidades de conversión. <br>
       Recuerda ¡solo hay una oportunidad para causar una impresión duradera!
      </p>
+
+     <h4 class="pt-5 pb-3">
+          Todavia no tenes pensado un nombre para tu sitio web? <br>
+          No tenes idea donde vas a alojarlo?
+        </h4>
+
+        <p>
+          Te ayudamos en la eleccion de tu dominio para que, ademas de ser atractivo, 
+          pueda ser efectivo a la hora de posicionar tu sitio web en los navegadores mas 
+          populares. 
+        </p>
