--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blank_File | Crea tu pagina Web</title>
+    <title>Blank File - Contacto</title>
     <meta name="description" content="Blank_File | Crearemos una presencia digital única y atractiva que refleje la identidad de tu marca. Contactate">
     <meta name="robots" content="index">
     <meta name="title" content="Blank file">
@@ -90,7 +90,7 @@
                 <a href="sobre-nosotros.html" class="nav-link">NOSOTROS</a>
               </li>
               <li class="nav-item p-3 py-md-1">
-                <a href="" class="nav-link">BLOG</a>
+                <a href="blog.html" class="nav-link">BLOG</a>
               </li>
               <li class="nav-item p-3 py-md-1">
                 <a href="contacto.html" class="nav-link">CONTACTO</a>
@@ -235,11 +235,11 @@
             </div>
             
             <div class="col-md-2 col-sm-4" id="linkf">
-                <h5 id="">RECURSOS</h4>
-                <h6 class="link2"><a href="index.html">Inicio</a></h6>
-                <h6 class="link2"><a href="sobre-nosotros.html" >Sobre nosotros</a></h6>
-                <h6 class="link2"><a href="blog.html">Blog</a></h6>
-                <h6 class="link2"><a href="contacto.html">Contactanos</a></h6>
+              <h5 id="">RECURSOS</h4>
+                <h6 class="link2 py-2"><a href="index.html">Inicio</a></h6>
+                <h6 class="link2 py-2"><a href="sobre-nosotros.html" >Sobre nosotros</a></h6>
+                <h6 class="link2 py-2"><a href="blog.html" >Blog</a></h6>
+                <h6 class="link2 pt-2"><a href="contacto.html" >Contactanos</a></h6>
             </div>
       
         </div>
@@ -250,7 +250,7 @@
       <div class="row copyright">
         <div class=" col-md-6">
                 <p >
-                  Copyright © 2023 Blank_file
+                  Copyright © 2023 Blank file
                 </p>
         </div>
         <div class="col-md-6">
