--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -232,7 +232,7 @@
                       <div class="row work-galery text-center ">
                       <div class="col-lg-3 col-md-6 py-3"><a href="https://argonautasrock.com.ar" target="_blank"><img class="" loading="lazy" src="assets/argo-mock.png" alt="argonautas rock"><h6>Argonautas</h6></a></div>
                       <div class="col-lg-3 col-md-6 py-3"><a href="https://cooperativaomega.com.ar" target="_blank"><img class="" loading="lazy" src="assets/coop-mock.png" alt="omega seguridad"><h6>Cooperativa omega</h6></a></div>
-                      <div class="col-lg-3 col-md-6 py-3"><a href="https://argonautasrock.com.ar" target="_blank"><img class="" loading="lazy" src="assets/argo-mock.png" alt="bitacora"><h6>Argonautas</h6></a></div>
+                      <div class="col-lg-3 col-md-6 py-3"><a href="https://argonautasrock.com.ar" target="_blank"><img class="" loading="lazy" src="assets/argo-mock.png" alt=""><h6>Argonautas</h6></a></div>
                       <div class="col-lg-3 col-md-6 py-3"><a href="" target="_blank"><img class="" loading="lazy" src="assets/coop-mock.png" alt="asesiname"><h6>ver mas</h6></a></div>
                       </div>
             </div>
