--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blank File - Blog</title>
     <meta name="description" content="Blank_File | Crearemos una presencia digital única y atractiva que refleje la identidad de tu marca. Contactate">
-    <meta name="robots" content="index">
+    <meta name="robots" content="index, follow">
     <meta name="title" content="Blank file">
     
     <meta name="description" content="Creamos y diseñamos tu pagina web para obtener juntos el mejor resultado para tu empresa">
