blog css individual

--- a/contacto.html
+++ b/contacto.html
@@ -44,7 +44,7 @@
 900&display=swap" rel="stylesheet">
 
     <!--estilos-->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/contact.css">
 
     <!--icono de pagina-->
     <link rel="icon" href="assets/bf about degrade chico.ico">
@@ -93,7 +93,7 @@
                 <a href="blog.html" class="nav-link">BLOG</a>
               </li>
               <li class="nav-item p-3 py-md-1">
-                <a href="contacto.html" class="nav-link">CONTACTO</a>
+                <a href="contacto.html" id="a-contact" class="nav-link">CONTACTO</a>
               </li>
               <li>
                 <button class="switch" id="switch">
@@ -107,11 +107,13 @@
             </ul>
             <!-- enlaces redes sociales -->
 
-            <div class="d-lg-none align-self-center py-3 ">
-              <a href=""><i class="bi bi-twitter px-2 fs-2"></i></a>
-              <a href=""><i class="bi bi-facebook px-2  fs-2"></i></a>
-              <a href=""><i class="bi bi-github px-2 fs-2"></i></a>
-              <a href=""><i class="bi bi-whatsapp px-2  fs-2"></i></a>
+            <div class="d-lg-none align-self-center py-5 ">
+              
+              <a href="https://www.facebook.com/blankfiledd" target="_blank"><i class="bi bi-facebook px-2  fs-2"></i></a>
+              <a href="https://api.whatsapp.com/send?phone=+5493521531997&amp;text= Quiero mi pagina web : "
+              target="_blank""><i class="bi bi-whatsapp px-2  fs-2"></i></a>
+              <a href=""><i class="bi bi-instagram px-2 fs-2"></i></a>
+              <a href=""><i class="bi bi-linkedin px-2 fs-2"></i></a>
             </div>
           </div>
         </section>
