--- a/index.html
+++ b/index.html
@@ -166,16 +166,16 @@
 
 
     </div>
-    </section>
+</section>
 
     <span class="nada" id="titulo"></span>
 
-    <main>
+<main>
         
         <!--intro-->
   
 <section class="intro">
-    <div class="container">
+    <article class="container">
         <div class="row center-inicio">
              <div id="intro" class="col-md-9">
       <h2  class="">Diseño y Desarrollo Web a Tu Medida, explora nuestro Universo Digital: </h2>
@@ -186,9 +186,9 @@
      </p>
              </div>
         </div>
-    </div>
+      </article>
     <hr>
-  </section>
+</section>
 
   
        <!--flayers-->
