etiq meta descrip

--- a/contacto.html
+++ b/contacto.html
@@ -8,10 +8,7 @@
     <meta name="description" content="Blank_File | Crearemos una presencia digital única y atractiva que refleje la identidad de tu marca. Contactate">
     <meta name="robots" content="index, follow">
     <meta name="title" content="Blank file">
-    
-    <meta name="description" content="Creamos y diseñamos tu pagina web para obtener juntos el mejor resultado para tu empresa">
-  
-    <meta name="keywords" content="crear pagina web, diseño web, blank_, como crear una pagina web, quien crea paginas web, paginas web, sitios web, ">
+    <meta name="keywords" content="contacto, crear pagina web, diseño web, blank_, quien crea paginas web, paginas web, sitios web">
   
     
     <meta name="author" content="Blank file">
