--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blank File - Crea tu pagina Web</title>
-    <meta name="description" content="Blank_File | Crearemos una presencia digital única y atractiva que refleje la identidad de tu marca. Contactate">
+   
     <meta name="robots" content="index, follow">
     <meta name="title" content="Blank file">
-    
-    <meta name="description" content="Creamos y diseñamos tu pagina web para obtener juntos el mejor resultado para tu empresa">
+    <meta name="description" content="Blank_File | Crearemos una presencia digital única y atractiva que refleje la identidad de tu marca. Contactate">
   
-    <meta name="keywords" content="crear pagina web, diseño web, blank_, como crear una pagina web, quien crea paginas web, paginas web, sitios web, ">
+    <meta name="keywords" content="blank file, crear pagina web, diseño web, blank_, quien crea paginas web, paginas web, sitios web, index ">
   
     
     <meta name="author" content="Blank file">
@@ -24,7 +23,7 @@
    <meta property="og:type"content="website">
    <meta property="og:image"content="https://blankfile.com.ar/assets/p-1.png">
    <meta property="og:url"content="https://blankfile.com.ar/">
-   <meta property="og:description"content="Creamos y diseñamos tu pagina web para obtener juntos el mejor resultado para tu empresa">
+   <meta property="og:description"content="Blank_File | Crearemos una presencia digital única y atractiva que refleje la identidad de tu marca. Contactate">
    <meta property="og:site_name" content="Blank File">
 
    <!--font awesome-->
