--- a/blog.html
+++ b/blog.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blank File - Blog</title>
-    <meta name="description" content="Blank_File | Crearemos una presencia digital única y atractiva que refleje la identidad de tu marca. Contactate">
+    <meta name="description" content="blog de marketing digital, todo lo que tenes que saber para que tu empresa crezca. Contactate">
     <meta name="robots" content="index, follow">
     <meta name="title" content="Blank file">
-    
-    <meta name="description" content="Creamos y diseñamos tu pagina web para obtener juntos el mejor resultado para tu empresa">
   
-    <meta name="keywords" content="crear pagina web, diseño web, blank_, como crear una pagina web, quien crea paginas web, paginas web, sitios web, ">
+    <meta name="keywords" content="blog, marketing digital,crear pagina web, diseño web, paginas web, sitios web, ">
   
     
     <meta name="author" content="Blank file">
@@ -24,7 +22,7 @@
    <meta property="og:type"content="website">
    <meta property="og:image"content="https://blankfile.com.ar/assets/p-1.png">
    <meta property="og:url"content="https://blankfile.com.ar/">
-   <meta property="og:description"content="Creamos y diseñamos tu pagina web para obtener juntos el mejor resultado para tu empresa">
+   <meta property="og:description"content="blog de marketing digital, todo lo que tenes que saber para que tu empresa crezca. Contactate">
    <meta property="og:site_name" content="Blank File">
 
    <!--font awesome-->
