--- a/blog.html
+++ b/blog.html
@@ -146,89 +146,94 @@
     <span class="nada" id="titulo"></span>
 
 <main>
-      <section class="card1 container py-5">
+
+      <section class="container articulos">
         <div class="row">
           <div class="col-lg-3 col-md-6">
-            <div class="card my-3" style="width: 18rem;">
-              <img src="assets/www.png" class="card-img-top" alt="...">
-              <div class="card-body ">
-                <h5 class="card-title">Dominios y Hosting</h5>
-                <p class="card-text">
-                  ¿Que son? ¿Por qué tengo que saber sobre ellos?
-                ¿Donde y como elegir el indicado</p><br>
-                <a href="blog/dominio-hosting.html" class="btn btn-primary">Ir al articulo</a>
-              </div>
+            <div class="carta">
+              <div class="img">
+              <img src="/assets/dom-host.png" alt="">
             </div>
+            <div class="content pt-3">
+              <h5>Dominios y Hosting</h5>
+              <p>
+                ¿Que son? ¿Por qué tengo que saber sobre ellos?
+                ¿Donde y como elegir el indicado
+              </p>
+            </div>
+            <div class="a">
+              <a href="/blog/dominio-hosting.html">
+                <button class="">
+                  leer articulo
+                </button>
+               </a>
+            </div>
+            </div>
+
           </div>
           <div class="col-lg-3 col-md-6">
-            <div class="card my-3" style="width: 18rem;">
-              <img src="assets/web.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Beneficios de tener una pagina web</h5>
-                <p class="card-text">Que tipo de página web necesito y porque es indispensable tenerla?</p>
-                <a href="blog/beneficios-pagina-web.html" class="btn btn-primary">Ir al articulo</a>
+            <div class="carta">
+              <div class="img">
+                <img src="/assets/web.png" alt="">
               </div>
-            </div>
+              <div class="content pt-3">
+                <h5>Beneficios de tener una pagina web</h5>
+                <p>
+                  Que tipo de página web necesito y porque es indispensable tenerla?
+                </p>
+              </div>
+              <div class="a">
+                <a href="#">
+                  <button class="">
+                    leer articulo
+                  </button>
+                 </a>
+              </div>
+              </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <div class="card my-3" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Ir al articulo</a>
+            <div class="carta">
+              <div class="img">
+                <img src="/assets/com-ar.png" alt="">
               </div>
-            </div>
+              <div class="content pt-3">
+                <h5>Dominios .com.ar / cuando, porque, donde?</h5>
+                <p>
+                  desde su registro hasta su importancia en la presencia en línea en Argentina. Descubre cómo aprovechar al máximo los dominios .com.ar
+                </p>
+              </div>
+              <div class="a">
+                <a href="#">
+                  <button class="">
+                    leer articulo
+                  </button>
+                 </a>
+              </div>
+              </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <div class="card my-3" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="carta">
+              <div class="img">
+                <img src="/assets/dom-host.png" alt="">
               </div>
-            </div>
+              <div class="content pt-3">
+                <h5>La importancia de las redes sociales para tu negocio</h5>
+                <p>
+                  (proximamente)
+                </p>
+              </div>
+              <div class="a">
+                <a href="#">
+                  <button class="">
+                   leer articulo
+                  </button>
+                 </a>
+              </div>
+              </div>
           </div>
         </div>
-        
       </section>
 
-      <section class="card2 container py-5">
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-      </section>
 </main>
 
 
