--- a/index.html
+++ b/index.html
@@ -390,14 +390,14 @@
 
                 <div class="row blog-galery text-center">
                 <div class="col-lg-3 col-md-6 py-3 mostrar">
-                  <a href="blog/dominio-hosting.html" target="_blank"><img class="" loading="lazy" src="assets/www.png" alt="bitacora">
+                  <a href="blog/dominio-hosting.html" target="_blank"><img class="" loading="lazy" src="assets/dom-host.png" alt="dominios y hosting">
                     <h6>Dominios y Hosting</h5>
                     <p>
                       ¿Que son? ¿Por qué tengo que saber sobre ellos? 
                     </p></a>
                 </div>
                 <div class="col-lg-3 col-md-6  py-3 mostrar">
-                  <a href="blog/beneficios-pagina-web.html" target="_blank"><img class="" loading="lazy" src="assets/web.png" alt="asesiname">
+                  <a href="#" target="_blank"><img class="" loading="lazy" src="assets/web.png" alt="beneficios de una web">
                     <h6>Beneficios de tener una pagina web</h6>
                     <p>
                       Que tipo de página web necesito y porque es indispensable tenerla?
