--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -65,9 +65,9 @@
 
     <header class="" id="header"> 
      <nav class="navbar navbar-expand-lg" id="nav">  
-          <div class="container-fluid">
+          <div class="container">
             
-            <a href="" class="navbar-brand"> <img  src="assets/logo-chico.gif" alt="Blank File" class="logo"> </a>
+            <a href="https://blankfile.com.ar" class="navbar-brand"><img src="assets/blank-logo.png" alt="blank file logo" class="logo"></a>
         
             <!-- NAV BUTTON  -->
 
@@ -77,7 +77,7 @@
         <!-- OFFCANVAS MAIN CONTAINER START -->
         <section class="offcanvas offcanvas-start" id="menuLateral" tabindex="-1">
           <div class="offcanvas-header" data-bs-theme="dark">
-            <a class="offcanvas-title"><img  src="assets/logo-chico.gif" alt="Blank File" class="logo "></a>
+            <a class="offcanvas-title"><img src="assets/blank-logo.png" alt="blank file logo"></a>
             <button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="offcanvas"></button>
           </div>
           <!-- OFF CANVAS MENU LINKS  START-->
