--- a/contacto.html
+++ b/contacto.html
@@ -207,20 +207,23 @@
 </section>
  
 
- <!--footer-->
-
+<!--footer-->
+ 
 <footer class="">
-  <hr style="width: 90%; margin-left: 5%;padding-top: 5px;">
+  <hr style="width: 90%; margin-left: 5%;">
     <div class="container footer">
         <div class="row pt-4 foot">
-            <div class=" col-md-6 ">
-                <img class="img-fluid" src="assets/bf-footer.png" alt="diseño web blank file">
+            <div class=" col-lg-3 ">
+                <img class="img-fluid" src="assets/blank-logo.png" alt="diseño web blank file">
+                </div>
+                <div class="col-lg-5">
                 <p class="py-4">
-                   Como vos, estamos creciendo, nos estamos expandiendo, y queremos que seas parte de esto.
+                   Como vos, estamos creciendo, nos estamos expandiendo y queremos que seas parte de esto. 
+                   
                 </p>
             </div>
             
-            <div class="col-md-2 col-sm-4" id="linkf">
+            <div class="col-lg-3 col-sm-4" id="linkf">
               <h5 id="">RECURSOS</h4>
                 <h6 class="link2 py-2"><a href="index.html">Inicio</a></h6>
                 <h6 class="link2 py-2"><a href="sobre-nosotros.html" >Sobre nosotros</a></h6>
