cambio de color

--- a/contacto.html
+++ b/contacto.html
@@ -133,15 +133,12 @@
              </div>
          </section>
 
-
-    <span class="nada" id="titulo"></span>
-
     <main>
 
 
  <!--heblemos-->
 
-<section class="hablemos pt-5">
+<section class="hablemos">
     <div class="container about">
         <div class="row ">
             <div class=" col-lg-12 col-md-12" id="hablemos">
