--- a/blog.html
+++ b/blog.html
@@ -138,93 +138,52 @@
 
 <main>
 
-      <section class="container articulos">
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="carta">
-              <div class="img">
-              <img src="/assets/dom-host.png" alt="">
+      <section class="articulos pt-3">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-md-6">
+              <div class="card">
+  <div class="card-image"> <img class="" src="/assets/dom-host.png" alt=""></div>
+  <p class="card-title">Dominios y hosting</p>
+  <p class="card-body">
+    ¿Que son? ¿Por qué tengo que saber sobre ellos? ¿Donde y como elegir el indicado
+  </p>
+  <p class="card-footer">ir al <a href="/blog/dominio-hosting.html" class="by-name">articulo</a></p>
+</div>
             </div>
-            <div class="content pt-3">
-              <h5>Dominios y Hosting</h5>
-              <p>
-                ¿Que son? ¿Por qué tengo que saber sobre ellos?
-                ¿Donde y como elegir el indicado
-              </p>
+            <div class="col-lg-3 col-md-6">
+              <div class="card">
+  <div class="card-image"><img src="/assets/www.png" alt=""></div>
+  <p class="card-title">Beneficios de tener una pagina web</p>
+  <p class="card-body">
+    Que tipo de página web necesito y porque es indispensable tenerla?
+  </p>
+  <p class="card-footer">ir al <a href="/blog/beneficios-pagina-web.html" class="by-name">articulo</a></p>
+</div>
             </div>
-            <div class="a">
-              <a href="/blog/dominio-hosting.html">
-                <button class="">
-                  leer articulo
-                </button>
-               </a>
+            <div class="col-lg-3 col-md-6">
+              <div class="card">
+  <div class="card-image"><img src="/assets/com-ar.png" alt=""></div>
+  <p class="card-title">Dominios .com.ar / cuando, porque, donde?</p>
+  <p class="card-body">
+    Descubre cómo aprovechar al máximo los dominios .com.ar
+     </p>
+     <p class="card-footer">ir al <a href="#" class="by-name">articulo</a></p>
+</div>
+            </div> 
+            <div class="col-lg-3 col-md-6">
+              <div class="card">
+  <div class="card-image"></div>
+  <p class="card-title">La importancia de las redes sociales para tu negocio</p>
+  <p class="card-body">
+  Proximamente 
+  </p>
+  <p class="card-footer">ir al <a href="#" class="by-name">articulo</a></p>
+</div>
             </div>
-            </div>
-
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="carta">
-              <div class="img">
-                <img src="/assets/web.png" alt="">
-              </div>
-              <div class="content pt-3">
-                <h5>Beneficios de tener una pagina web</h5>
-                <p>
-                  Que tipo de página web necesito y porque es indispensable tenerla?
-                </p>
-              </div>
-              <div class="a">
-                <a href="#">
-                  <button class="">
-                    leer articulo
-                  </button>
-                 </a>
-              </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="carta">
-              <div class="img">
-                <img src="/assets/com-ar.png" alt="">
-              </div>
-              <div class="content pt-3">
-                <h5>Dominios .com.ar / cuando, porque, donde?</h5>
-                <p>
-                  desde su registro hasta su importancia en la presencia en línea en Argentina. Descubre cómo aprovechar al máximo los dominios .com.ar
-                </p>
-              </div>
-              <div class="a">
-                <a href="#">
-                  <button class="">
-                    leer articulo
-                  </button>
-                 </a>
-              </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="carta">
-              <div class="img">
-                <img src="/assets/dom-host.png" alt="">
-              </div>
-              <div class="content pt-3">
-                <h5>La importancia de las redes sociales para tu negocio</h5>
-                <p>
-                  (proximamente)
-                </p>
-              </div>
-              <div class="a">
-                <a href="#">
-                  <button class="">
-                   leer articulo
-                  </button>
-                 </a>
-              </div>
-              </div>
           </div>
         </div>
       </section>
-
 </main>
 
 
