--- a/contacto.html
+++ b/contacto.html
@@ -117,7 +117,7 @@
             <section class="container-fluid">
               <div class="row" id="bannertop">
              
-                  <div class="col-lg-7  " id="fondo">
+                  <div class="offset-lg-1 col-lg-6  " id="fondo">
                     <h1> ¡Hablemos de tu Proyecto en la Web!</h1>
         
                     <h3> 
